[package]
name = "default-ext"
version = "0.1.0"
authors = ["mechiru <u9053u6d41@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "This library provides extension methods for the `Default` trait."
repository = "https://github.com/mechiru/default-ext"
documentation = "https://docs.rs/default-ext"
categories = ["rust-patterns"]
keywords = ["default", "extension"]
readme = "README.md"

[dependencies]
